log/build_2024-10-04_20-54-42/ur5_control/stderr.log
  File "/home/ojasvi/Desktop/eYRC2024LogisticCobot/install/ur5_control/lib/python3.10/site-packages/ur5_control/task1b_boiler_plate.py", line 470
    elif angle<0.5 && angle>-0.5:
                    ^
SyntaxError: invalid syntax

